# battlearena

./: .gitignore  GAME_LOGIC.md  GAME_LOGIC_SPEC.md  README.md  index.html  package-lock.json  package.json  tailwind.config.ts  tsconfig.app.json  vite.config.ts  wrangler.jsonc
.lovable/: plan.md
functions/api/: leaderboard.ts  stats.ts
public/.well-known/: radix.json
scripts/: optimize-images.mjs
scrypto/: Cargo.toml
scrypto/src/: lib.rs
src/: App.css  App.tsx  assets.d.ts  index.css  main.tsx
src/components/game/: BattleArena.tsx  Leaderboard.tsx  NameEntry.tsx  PixelCanvas.tsx  RadixConnectButton.tsx  Shop.tsx  StarryBackground.tsx  StartScreen.tsx
src/game/: constants.ts  types.ts  useGameState.ts
src/hooks/: useGameAudio.ts  useRadixWallet.ts
src/pages/: Index.tsx
src/test/: game-constants.test.ts  game-state.test.ts
tasks/: bug-verification.md  context7-auditoria-por-area-2026-03-08.md  game-flow.md  todo.md  todo2.md
