[package]
name = "battle_arena"
version = "0.1.0"
edition = "2021"
resolver = "2"

[dependencies]
scrypto = { version = "1.3.0" }

[dev-dependencies]
scrypto-test = { version = "1.3.0" }

[profile.release]
opt-level = 'z'
lto = true
codegen-units = 1
panic = 'abort'
strip = true
overflow-checks = true

[features]
default = []

[lib]
crate-type = ["cdylib", "lib"]
